<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#e8dfff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/my_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/button"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="@color/button_color_basic"
        android:onClick="showMessage"
        android:nestedScrollingEnabled="false" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/super_duo1"
        android:id="@+id/button2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:background="@color/button_color_basic"
        android:onClick="showMessage"
        android:nestedScrollingEnabled="false" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/super_duo2"
        android:id="@+id/button3"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="@color/button_color_basic"
        android:onClick="showMessage"
        android:nestedScrollingEnabled="false" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/button4"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:background="@color/button_color_basic"
        android:onClick="showMessage"
        android:nestedScrollingEnabled="false" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/materialize"
        android:id="@+id/button5"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:background="@color/button_color_basic"
        android:onClick="showMessage"
        android:nestedScrollingEnabled="false" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="10dp"
        android:background="@color/button_color_basic"
        android:onClick="showMessage"
        android:nestedScrollingEnabled="false" />
</RelativeLayout>
